# krolik

./: .env.example  README.md  pyproject.toml
krolik/: __init__.py  __main__.py
krolik/agent/: __init__.py  context.py  loop.py  skills.py  subagent.py
krolik/agent/tools/: __init__.py  base.py  filesystem.py  message.py  registry.py  shell.py  spawn.py  web.py
krolik/bus/: __init__.py  queue.py
krolik/channels/: __init__.py  base.py  feishu.py  manager.py  telegram.py  whatsapp.py
krolik/cli/: __init__.py  commands.py
krolik/config/: __init__.py  loader.py  schema.py
krolik/cron/: __init__.py  service.py
krolik/heartbeat/: __init__.py
krolik/llm/: __init__.py  gateway.py  models.py  router.py  tool.py
krolik/mcp/: __init__.py  client.py  config.py  tools.py
krolik/memory/: __init__.py  client.py  config.py  cron_jobs.py  intent_aware.py  proactive.py  scheduler.py  store.py  tools.py
krolik/providers/: __init__.py  litellm_provider.py
krolik/session/: __init__.py  manager.py
krolik/skills/: README.md
krolik/skills/github/: SKILL.md
krolik/skills/summarize/: SKILL.md
krolik/skills/tmux/: SKILL.md
krolik/skills/tmux/scripts/: find-sessions.sh
krolik/skills/weather/: SKILL.md
krolik/tools/: __init__.py  cli_proxy.py  workflow.py
krolik/utils/: __init__.py  helpers.py
memu/: __init__.py
nanobot/agent/: __init__.py  context.py  loop.py
nanobot/agent/tools/: registry.py
nanobot/cli/: commands.py
nanobot/config/: loader.py  schema.py
tests/: conftest.py
tests/integration/: test_agent_loop.py
tests/llm/: test_gateway.py  test_models.py  test_router.py  test_tools.py
tests/mcp/: __init__.py  test_client.py  test_tools.py
tests/memory/: __init__.py  test_client.py  test_store.py  test_tools.py
