[project]
name = "krolik"
version = "0.2.0"
description = "Proactive AI bot with memU memory and dynamic LLM routing"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "krolik contributors"}
]
keywords = ["ai", "agent", "chatbot", "memory", "proactive"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "typer>=0.9.0",
    "litellm>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "websockets>=12.0",
    "websocket-client>=1.6.0",
    "httpx>=0.25.0",
    "loguru>=0.7.0",
    "readability-lxml>=0.8.0",
    "rich>=13.0.0",
    "croniter>=2.0.0",
    "python-telegram-bot>=21.0",
    # memU core dependencies
    "numpy>=1.26.0",
    "openai>=1.0.0",
    "sqlmodel>=0.0.14",
    "alembic>=1.12.0",
    "pendulum>=3.0.0",
    "defusedxml>=0.7.1",
]

[project.optional-dependencies]
feishu = [
    "lark-oapi>=1.0.0",
]
ml = [
    "sentence-transformers>=2.0.0",
    "lazyllm>=0.7.0",
]
postgres = [
    "pgvector>=0.3.0",
    "psycopg2-binary>=2.9.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]

[project.scripts]
krolik = "krolik.cli.commands:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["krolik", "memu"]

[tool.hatch.build.targets.wheel.sources]
"krolik" = "krolik"
"memu" = "memu"

# Include non-Python files in skills
[tool.hatch.build]
include = [
    "krolik/**/*.py",
    "krolik/skills/**/*.md",
    "krolik/skills/**/*.sh",
    "memu/**/*.py",
]

[tool.hatch.build.targets.sdist]
include = [
    "krolik/",
    "memu/",
    "README.md",
    "LICENSE",
]


[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
